--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+.home-sd {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: url("https://images.squarespace-cdn.com/content/v1/58bdca902e69cf9dc75b5864/1572987284892-E1PZVU8E8RBJJI03OQGE/Websize0001.jpeg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  opacity: 0.90;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+  background-color: rgb(241, 67, 67) !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo {
+  color: rgb(255, 255, 255);
+  font-size: 24px !important;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.logo-F {
+  color: rgba(8, 228, 8, 0.911);
+}
+
+.intro-container {
+  position: relative;
+  margin-left: 10%;
+  margin-right: 15%;
+  margin-top: 7.5%;
+  margin-bottom: 5%;
+}
+
+.intro {
+  margin-bottom: 30px;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home-pz {
+  background-image: url("https://img.freepik.com/free-vector/pizza-menu-chalkboard-background_1284-11715.jpg?w=2000");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  opacity: 2;
 }
