--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,19 @@
   opacity: 0.90;
 }
 
+.order-success {
+  background-color: white;
+  margin: 3rem 2rem;
+  padding: 1.5rem;
+  border-radius: 18px;
+  box-shadow: 2px 2px 20px 2px rgb(205 205 205 / 70%);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
+
 .navbar {
   background-color: rgb(241, 67, 67) !important;
 }
